# ticketautomat

./: 11.tram  CMakeLists.txt  COMPILE.txt  README.md  TEST.txt  build.sh  build_bin.sh  coding_style_report.txt  errorHandler.cpp  errorHandler.h  ioUtil.cpp  ioUtil.h  main.cpp  moneyUtil.h  orchestrator.cpp  orchestrator.h  tester.cpp  tramUtil.cpp  tramUtil.h  uiUtil.cpp  uiUtil.h
errors/: errlist.err
oldsrc_uiIo/: uiIoUtil.cpp  uiIoUtil.h
src/: errorHandler.cpp  errorHandler.h  io.cpp  io.h  ioUtil.cpp  ioUtil.h  main.cpp  monCalc.cpp  monCalc.h  moneyUtil.cpp  moneyUtil.h  orchestrator.cpp  orchestrator.h  tramManager.cpp  tramManager.h  tramUtil.cpp  tramUtil.h  uiFormat.cpp  uiFormat.h  uiUtil.cpp  uiUtil.h
src_id/: io.cpp  io.h  main.cpp  monCalc.cpp  monCalc.h  tramManager.cpp  tramManager.h  uiFormat.cpp  uiFormat.h
src_old_reference/: io.h  main.cpp  monCalc.cpp  tramManager.h  uiFormat.cpp  uiFormat.h
tram_data/: 1.tram  11.tram  8.tram  9.tram
